--- a/disain.css
+++ b/disain.css
@@ -11,6 +11,7 @@ body {
     background-color: #ffffff;
     padding: 15px 0;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
 .container {
@@ -20,7 +21,6 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    z-index: 1000; /* Tagab, et päis on alati peal */
 }
 
 /* Logo */
@@ -34,7 +34,7 @@ body {
     text-decoration: none;
     color: black;
     font-weight: bold;
-    transition: 0.3s;
+    transition: 0.5s;
 }
 
 .nav a:hover {
@@ -88,7 +88,7 @@ p {
 
 /* Jalus */
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -100,4 +100,7 @@ p {
     align-items: center;
     justify-content: center;
 }
+
+
+
 
